cluster/apps/cascader/networkpolicies/prometheus-egress-cascader.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-egress-cascader
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
      app.kubernetes.io/name: prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cascader
            app.kubernetes.io/component: controller
            "k8s:io.kubernetes.pod.namespace": cascader-system
      toPorts:
        - ports:
            - port: "8443"
